# site2filter

./: LICENSE  README.md  pyproject.toml
.github/workflows/: black.yml  pylint.yml
src/site2filter/: __init__.py  __main__.py  copy.py  filter.py  parse_arguments.py  site2filter.py
